# muvfde

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pip.yml  update-readme.yml  wheels.yml
integeration_test/: benchmark.md  benchmark.py  requirements.txt
src/: fixed_dimensional_encoding.cpp  fixed_dimensional_encoding.h  fixed_dimensional_encoding_config.h  muvfde_ext.cpp
src/muvfde/: __init__.py
src/muvfde_ext/: __init__.py
tests/: test_basic.py  test_config.py  test_fde.py
