[build-system]
requires = ["scikit-build-core >=0.11.4", "nanobind >=2.7.0"]
build-backend = "scikit_build_core.build"

[project]
name = "muvfde"
dynamic = ["version"]
description = "Fixed Dimensional Embeddings for Multi-dimensional vectors."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arjun Variar", email = "accio.arjun@gmail.com" }]

# PEP 639 license metadata
license = "Apache-2.0"
license-files      = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C++",

    "Topic :: Software Development :: Libraries :: Python Modules",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/viig99/muvfde"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/muvfde/_version.py"]

[tool.setuptools_scm]
write_to = "src/muvfde/_version.py"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
archs = ["auto64"]  # Build only 64-bit wheels
skip = "pp*"

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = ["pytest", "numpy"]

# Don't test Python 3.8 wheels on macOS/arm64
test-skip = "cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
